Move dependencies to correct places